WICKET-4124 Link to examples on Wicket homepage still shows 1.4.18 examples
Update the docs to link to wicket-library.com which is more stable than wicketstuff.org



git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1299719 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
 
 <li>Find out why you should <a href='meet/introduction.html'>use Wicket</a></li>
 
-<li>Check out some selected <a href='learn/examples'>examples in detail</a> or see them and many more in <a href='http://wicketstuff.org/wicket14/'>live action</a></li>
+<li>Check out some selected <a href='learn/examples'>examples in detail</a> or see them and many more in <a href='http://www.wicket-library.com/wicket-examples/'>live action</a></li>
 
-<li>Take a look at our live <a href='http://wicketstuff.org/wicket14/compref/'>component reference</a></li>
+<li>Take a look at our live <a href='http://www.wicket-library.com/wicket-examples/compref/'>component reference</a></li>
 
 <li>Go and <a href='start/download.html'>download Wicket</a></li>
 
@@ -208,63 +208,63 @@
 
 
 <li>
-	<a href='/2012/01/23/wicket-1.5.4-released.html'>Wicket 1.5.4 released</a> - <span>23 Jan 2012</span><br />
-	This is the fourth maintenance release of the Wicket 1.5.x series. This release brings over 68 bug fixes and improvements. Git tag Changelog To use...
-	<a href='/2012/01/23/wicket-1.5.4-released.html'>more</a></li>
+        <a href='/2012/01/23/wicket-1.5.4-released.html'>Wicket 1.5.4 released</a> - <span>23 Jan 2012</span><br />
+        This is the fourth maintenance release of the Wicket 1.5.x series. This release brings over 68 bug fixes and improvements. Git tag Changelog To use...
+        <a href='/2012/01/23/wicket-1.5.4-released.html'>more</a></li>
 
 
 <li>
-	<a href='/2011/11/14/wicket-1.5.3-released.html'>Wicket 1.5.3 released</a> - <span>14 Nov 2011</span><br />
-	This is the third maintenance release of the Wicket 1.5.x series. This release brings over 40 bug fixes and improvements. Subversion tag Changelog To use...
-	<a href='/2011/11/14/wicket-1.5.3-released.html'>more</a></li>
+        <a href='/2011/11/14/wicket-1.5.3-released.html'>Wicket 1.5.3 released</a> - <span>14 Nov 2011</span><br />
+        This is the third maintenance release of the Wicket 1.5.x series. This release brings over 40 bug fixes and improvements. Subversion tag Changelog To use...
+        <a href='/2011/11/14/wicket-1.5.3-released.html'>more</a></li>
 
 
 <li>
-	<a href='/2011/10/24/wicket-1.5.2-released.html'>Wicket 1.5.2 released</a> - <span>24 Oct 2011</span><br />
-	This is the second maintenance release of the Wicket 1.5.x series. This release brings over 25 bug fixes and 5 improvements. Subversion tag Changelog To...
-	<a href='/2011/10/24/wicket-1.5.2-released.html'>more</a></li>
+        <a href='/2011/10/24/wicket-1.5.2-released.html'>Wicket 1.5.2 released</a> - <span>24 Oct 2011</span><br />
+        This is the second maintenance release of the Wicket 1.5.x series. This release brings over 25 bug fixes and 5 improvements. Subversion tag Changelog To...
+        <a href='/2011/10/24/wicket-1.5.2-released.html'>more</a></li>
 
 
 <li>
-	<a href='/2011/10/17/wicket-1.4.19-released.html'>Wicket 1.4.19 released</a> - <span>17 Oct 2011</span><br />
-	This is nineteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch. Subversion tag Changelog To...
-	<a href='/2011/10/17/wicket-1.4.19-released.html'>more</a></li>
+        <a href='/2011/10/17/wicket-1.4.19-released.html'>Wicket 1.4.19 released</a> - <span>17 Oct 2011</span><br />
+        This is nineteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch. Subversion tag Changelog To...
+        <a href='/2011/10/17/wicket-1.4.19-released.html'>more</a></li>
 
 
 <li>
-	<a href='/2011/09/29/wicket-1.5.1-released.html'>Wicket 1.5.1 released</a> - <span>29 Sep 2011</span><br />
-	This is the first maintenance release of the Wicket 1.5.x series. This release brings over 40 bug fixes and 15 improvements. Subversion tag Changelog To...
-	<a href='/2011/09/29/wicket-1.5.1-released.html'>more</a></li>
+        <a href='/2011/09/29/wicket-1.5.1-released.html'>Wicket 1.5.1 released</a> - <span>29 Sep 2011</span><br />
+        This is the first maintenance release of the Wicket 1.5.x series. This release brings over 40 bug fixes and 15 improvements. Subversion tag Changelog To...
+        <a href='/2011/09/29/wicket-1.5.1-released.html'>more</a></li>
 
 
 <li>
-	<a href='/2011/09/07/wicket-1.5-released.html'>Apache Wicket releases Wicket 1.5</a> - <span>07 Sep 2011</span><br />
-	The Apache Wicket team is proud to announce the immediate availability of the newest release of their component oriented open source Java web framework. Apache...
-	<a href='/2011/09/07/wicket-1.5-released.html'>more</a></li>
+        <a href='/2011/09/07/wicket-1.5-released.html'>Apache Wicket releases Wicket 1.5</a> - <span>07 Sep 2011</span><br />
+        The Apache Wicket team is proud to announce the immediate availability of the newest release of their component oriented open source Java web framework. Apache...
+        <a href='/2011/09/07/wicket-1.5-released.html'>more</a></li>
 
 
 <li>
-	<a href='/2011/08/28/1.5-RC7-released.html'>Wicket 1.5-RC7 released</a> - <span>28 Aug 2011</span><br />
-	The Wicket Team is proud to introduce the seventh Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and...
-	<a href='/2011/08/28/1.5-RC7-released.html'>more</a></li>
+        <a href='/2011/08/28/1.5-RC7-released.html'>Wicket 1.5-RC7 released</a> - <span>28 Aug 2011</span><br />
+        The Wicket Team is proud to introduce the seventh Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and...
+        <a href='/2011/08/28/1.5-RC7-released.html'>more</a></li>
 
 
 <li>
-	<a href='/2011/08/23/cve-2011-2712.html'>CVE-2011-2712 - Apache Wicket XSS vulnerability</a> - <span>23 Aug 2011</span><br />
-	Vendor: The Apache Software Foundation Versions Affected: Apache Wicket 1.4.x Apache Wicket 1.3.x and 1.5-RCx are not affected Description: With multi window support application configuration...
-	<a href='/2011/08/23/cve-2011-2712.html'>more</a></li>
+        <a href='/2011/08/23/cve-2011-2712.html'>CVE-2011-2712 - Apache Wicket XSS vulnerability</a> - <span>23 Aug 2011</span><br />
+        Vendor: The Apache Software Foundation Versions Affected: Apache Wicket 1.4.x Apache Wicket 1.3.x and 1.5-RCx are not affected Description: With multi window support application configuration...
+        <a href='/2011/08/23/cve-2011-2712.html'>more</a></li>
 
 
 <li>
-	<a href='/2011/08/09/wicket-1.4.18-released.html'>Wicket 1.4.18 released</a> - <span>09 Aug 2011</span><br />
-	This is eightteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch. Subversion tag Changelog To...
-	<a href='/2011/08/09/wicket-1.4.18-released.html'>more</a></li>
+        <a href='/2011/08/09/wicket-1.4.18-released.html'>Wicket 1.4.18 released</a> - <span>09 Aug 2011</span><br />
+        This is eightteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch. Subversion tag Changelog To...
+        <a href='/2011/08/09/wicket-1.4.18-released.html'>more</a></li>
 
 
 <li>
-	<a href='/2011/06/25/wicket-1.5-RC5.1-released.html'>Wicket 1.5-RC5.1 released</a> - <span>25 Jun 2011</span><br />
-	The Wicket Team is proud to introduce the fourth Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and...
-	<a href='/2011/06/25/wicket-1.5-RC5.1-released.html'>more</a></li>
+        <a href='/2011/06/25/wicket-1.5-RC5.1-released.html'>Wicket 1.5-RC5.1 released</a> - <span>25 Jun 2011</span><br />
+        The Wicket Team is proud to introduce the fourth Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and...
+        <a href='/2011/06/25/wicket-1.5-RC5.1-released.html'>more</a></li>
 
 </ul>
 <h1 id='books_about_wicket'>Books about Wicket</h1>
