--- a/learn/ides.html
+++ b/learn/ides.html
@@ -154,11 +154,11 @@
 			<p>For all leading IDE&#8217;s support is under development. Here&#8217;s a list of efforts for the major IDE&#8217;s.</p>
 
 <ul>
-<li>Eclipse: <a href='http://www.laughingpanda.org/mediawiki/index.php/Wicket_Bench'>Wicket Bench</a>, <a href='http://code.google.com/p/qwickie'>Qwickie</a></li>
+<li>Eclipse: <a href='http://code.google.com/p/qwickie'>Qwickie</a>, <a href='https://github.com/42Lines/wicket-source/wiki'>Wicket Source</a></li>
 
 <li>Netbeans: <a href='https://nbwicketsupport.dev.java.net/'>NB Wicket Support</a></li>
 
-<li>IntelliJ IDEA: <a href='http://wicketforge.googlecode.com/'>Wicket Forge</a></li>
+<li>IntelliJ IDEA: <a href='http://wicketforge.googlecode.com/'>Wicket Forge</a>, <a href='https://github.com/armhold/wicket-source-intellij'>Wicket Source</a></li>
 </ul>
 
 <p>These projects are not maintained or supported by the core Wicket team, but by their respective development teams.</p>
