--- a/contribute/patch.html
+++ b/contribute/patch.html
@@ -158,13 +158,15 @@
 <ul>
 <li>Identify an issue that you want to fix or improve</li>
 
-<li>Search JIRA and the mailing list to see if it&#8217;s already been discussed</li>
+<li>Search <a href='https://issues.apache.org/jira/browse/WICKET'>JIRA</a> and the mailing list to see if it&#8217;s already been discussed</li>
 
 <li>If it&#8217;s a bug or a feature request, open a <a href='https://issues.apache.org/jira/browse/WICKET'>JIRA issue</a></li>
 
-<li><a href='../start/quickstart.html'>Create a quickstart</a> that you can use for prototyping the feature or demonstrating the bug ** Attach this quickstart to the JIRA issue if it&#8217;s representing a bug report.</li>
+<li><a href='../start/quickstart.html'>Create a quickstart</a> that you can use for prototyping the feature or demonstrating the bug</li>
 
-<li>Get Subversion running</li>
+<li>Attach this quickstart to the <a href='https://issues.apache.org/jira/browse/WICKET'>JIRA issue</a> if it&#8217;s representing a bug report.</li>
+
+<li>Get <a href='http://git-scm.com/'>Git</a> running</li>
 
 <li><a href='../start/download.html#snapshots_and_latest_bleedingedge_code'>Checkout out the code</a></li>
 
@@ -172,12 +174,12 @@
 
 <li>Create the patch:</li>
 </ul>
-<div class='highlight'><pre><code class='console'><span class='go'>svn add any_files_you_created</span>
-<span class='go'>svn diff &gt; /tmp/fix-WICKET-NNNN.patch</span>
+<div class='highlight'><pre><code class='console'><span class='go'>git add any_files_you_created_modified_or_deleted</span>
+<span class='go'>git diff &gt; /tmp/fix-WICKET-NNNN.patch</span>
 </code></pre>
 </div>
 <ul>
-<li>Attach that file (/tmp/fix-WICKET-NNNN.patch) to the JIRA</li>
+<li>Attach that file (/tmp/fix-WICKET-NNNN.patch) to the <a href='https://issues.apache.org/jira/browse/WICKET'>JIRA</a></li>
 </ul>
 		</div>
         <div id="clearer"></div>
