--- a/start/download.html
+++ b/start/download.html
@@ -185,24 +185,26 @@
 <div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
     <span class='nt'>&lt;groupId&gt;</span>org.slf4j<span class='nt'>&lt;/groupId&gt;</span>
     <span class='nt'>&lt;artifactId&gt;</span>slf4j-log4j12<span class='nt'>&lt;/artifactId&gt;</span>
-    <span class='nt'>&lt;version&gt;</span>1.5.6<span class='nt'>&lt;/version&gt;</span>
+    <span class='nt'>&lt;version&gt;</span>1.6.4<span class='nt'>&lt;/version&gt;</span>
 <span class='nt'>&lt;/dependency&gt;</span>
 </code></pre>
 </div>
 <h2 id='snapshots_and_latest_bleedingedge_code'>SNAPSHOTs and latest bleeding-edge code</h2>
 
-<p>If you wish to build the latest code from scratch, trunk and branches live in the following places in Subversion:</p>
+<p>If you wish to build the latest code from scratch, master and branches live in Git repository: <a href='https://git-wip-us.apache.org/repos/asf/wicket.git'>https://git-wip-us.apache.org/repos/asf/wicket.git</a></p>
+
+<p>Branches:</p>
 
 <ul>
-<li><strong>6.0.x</strong>: <a href='http://svn.apache.org/repos/asf/wicket/trunk'>http://svn.apache.org/repos/asf/wicket/trunk</a></li>
+<li><strong>6.0.x</strong>: master</li>
 
-<li><strong>1.5.x</strong>: <a href='http://svn.apache.org/repos/asf/wicket/branches/wicket-1.5.x'>http://svn.apache.org/repos/asf/wicket/branches/wicket-1.5.x</a></li>
+<li><strong>1.5.x</strong>: wicket-1.5.x</li>
 
-<li><strong>1.4.x</strong>: <a href='http://svn.apache.org/repos/asf/wicket/branches/wicket-1.4.x'>http://svn.apache.org/repos/asf/wicket/branches/wicket-1.4.x</a></li>
+<li><strong>1.4.x</strong>: wicket-1.4.x</li>
 
-<li><strong>1.3.x</strong>: <a href='http://svn.apache.org/repos/asf/wicket/branches/wicket-1.3.x'>http://svn.apache.org/repos/asf/wicket/branches/wicket-1.3.x</a></li>
+<li><strong>1.3.x</strong>: wicket-1.3.x</li>
 
-<li><strong>1.2.x</strong>: <a href='http://svn.apache.org/repos/asf/wicket/branches/wicket-1.2.x'>http://svn.apache.org/repos/asf/wicket/branches/wicket-1.2.x</a></li>
+<li><strong>1.2.x</strong>: wicket-1.2.x</li>
 </ul>
 
 <p>There&#8217;s also a Maven 2 repository providing SNAPSHOTs available here:</p>
