--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -194,11 +194,11 @@
 </script><div id='mvncmd'>
 	<div>
 		<label for='groupId' title='Base Package'>GroupId:</label>
-		<input id='groupId' type='text' value='com.mycompany' onkeyup='changeIt();' /><span title='Base Package'>&nbsp;(?)</span><br />
+		<input id='groupId' type='text' onkeyup='changeIt();' value='com.mycompany' /><span title='Base Package'>&nbsp;(?)</span><br />
 		<label for='artifactId' title='Project Name'>ArtifactId:</label> 
-		<input id='artifactId' type='text' value='myproject' onkeyup='changeIt();' /><span title='Project Name'>&nbsp;(?)</span><br />
+		<input id='artifactId' type='text' onkeyup='changeIt();' value='myproject' /><span title='Project Name'>&nbsp;(?)</span><br />
 		<label for='version' title='Wicket Version'>Version:</label>
-		<select onchange='changeIt();' id='version'>
+		<select id='version' onchange='changeIt();'>
 
 		
 			<option value='6.0-SNAPSHOT'>6.0-SNAPSHOT</option>
@@ -223,7 +223,7 @@
 		</select><span title='Wicket Version'>&nbsp;(?)</span>
 	</div>
 	<div>
-		<label for='cmdLine' id='cmdLabel'>Command Line:</label>
+		<label id='cmdLabel' for='cmdLine'>Command Line:</label>
 		<textarea id='cmdLine' onfocus='this.select();'>
 		</textarea>
 		<script>changeIt();</script>
