--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -194,9 +194,9 @@
 </script><div id='mvncmd'>
 	<div>
 		<label for='groupId' title='Base Package'>GroupId:</label>
-		<input id='groupId' type='text' onkeyup='changeIt();' value='com.mycompany' /><span title='Base Package'>&nbsp;(?)</span><br />
+		<input type='text' id='groupId' onkeyup='changeIt();' value='com.mycompany' /><span title='Base Package'>&nbsp;(?)</span><br />
 		<label for='artifactId' title='Project Name'>ArtifactId:</label> 
-		<input id='artifactId' type='text' onkeyup='changeIt();' value='myproject' /><span title='Project Name'>&nbsp;(?)</span><br />
+		<input type='text' id='artifactId' onkeyup='changeIt();' value='myproject' /><span title='Project Name'>&nbsp;(?)</span><br />
 		<label for='version' title='Wicket Version'>Version:</label>
 		<select id='version' onchange='changeIt();'>
 
@@ -293,7 +293,7 @@
 
 <h3 id='using_the_jetty_plugin'>Using the Jetty Plugin</h3>
 
-<p>The Jetty plugin is also enabled by default in the quickstart. If you are using Maven, you can change directory into the project and run the &#8220;mvn jetty:run&#8221; command. This will compile the project and deploy it to an embeded instance of the Jetty servlet engine, which will run on port 8080, by default. As a result, once running, your application will be available at <a href='http:localhost:8080/myproject'>http:localhost:8080/myproject</a>.</p>
+<p>The Jetty plugin is also enabled by default in the quickstart. If you are using Maven, you can change directory into the project and run the &#8220;mvn jetty:run&#8221; command. This will compile the project and deploy it to an embeded instance of the Jetty servlet engine, which will run on port 8080, by default. As a result, once running, your application will be available at <a href='http://localhost:8080'>http://localhost:8080</a>.</p>
 
 <p>See the <a href='http://www.mortbay.org/maven-plugin/index.html'>Jetty plugin</a> documentation for configuration options, etc.</p>
 
@@ -301,7 +301,7 @@
 
 <h3 id='reproduce_the_problem'>Reproduce the problem</h3>
 
-<p>Assuming you have followed the instructions above, the quickstart is now created and ready for you to develop. Now comes the &#8220;duplicate the problem&#8221; part. Try to create pages or components that reproduce the problem you were trying to report. You can run the Start.java class from your IDE and go to <a href='http://localhost:8080/'>http://localhost:8080/</a> to see your test application. If you run the Start.java class in your IDE&#8217;s debug mode, you should be able to attach breakpoints and have automatic class and markup reloading.</p>
+<p>Assuming you have followed the instructions above, the quickstart is now created and ready for you to develop. Now comes the &#8220;duplicate the problem&#8221; part. Try to create pages or components that reproduce the problem you were trying to report. You can run the Start.java class from your IDE and go to <a href='http://localhost:8080'>http://localhost:8080</a> to see your test application. If you run the Start.java class in your IDE&#8217;s debug mode, you should be able to attach breakpoints and have automatic class and markup reloading.</p>
 
 <p>If you can&#8217;t reproduce the problem - start looking at your own code. Keep adding pieces from your code until either you reproduce the problem, or else you&#8217;ve found the bug in your own code. A lot of times, you will find the bug in your code just by trying to create a quickstart that demonstrates the bug in ours.</p>
 
