patch from Jesse Long to update site
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1309632 13f79535-47bb-0310-9956-ffa450edef68

--- a/learn/examples/guestbook.html
+++ b/learn/examples/guestbook.html
@@ -66,7 +66,7 @@
 			<a href="/learn/examples" title="Examples">Examples</a>
 		</li>
 		<li>
-			<a href="http://wicketstuff.org/wicket14/compref/">Components</a>
+			<a href="http://www.wicket-library.com/wicket-examples/compref/">Components</a>
 		</li>
 		<li>
 			<a href="/learn/projects/" title="Projects extending basic Wicket">Projects</a>
@@ -153,7 +153,7 @@
 			<h1>Guestbook</h1>
 			<p>The GuestBook application allows users to enter comments that appear on a page like a weblog. Drawing the list of comments is very easy with the Wicket <code>ListView</code> component. This example also gives an impression of what form handling is like.</p>
 
-<p><img alt='Guestbook screenshot' src='guestbook.png' /></p>
+<p><img src='guestbook.png' alt='Guestbook screenshot' /></p>
 
 <p>As with all examples, you have to put all files in the same package directory. This means putting the markup files and the java files next to one another. It is possible to alter this behavior, but that is beyond the scope of this example.</p>
 
