--- a/start/download.html
+++ b/start/download.html
@@ -66,7 +66,7 @@
 			<a href="/learn/examples" title="Examples">Examples</a>
 		</li>
 		<li>
-			<a href="http://wicketstuff.org/wicket14/compref/">Components</a>
+			<a href="http://www.wicket-library.com/wicket-examples/compref/">Components</a>
 		</li>
 		<li>
 			<a href="/learn/projects/" title="Projects extending basic Wicket">Projects</a>
@@ -160,7 +160,7 @@
 <ul>
 <li><strong>Latest stable release</strong>: <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5.5'>1.5.5</a></li>
 
-<li><strong>Last 1.4.x release</strong>: <a href='http://archive.apache.org/dist/wicket/1.4.19'>1.4.19</a></li>
+<li><strong>Last 1.4.x release</strong>: <a href='http://archive.apache.org/dist/wicket/1.4.20'>1.4.20</a></li>
 
 <li><strong>Archived releases</strong>: <a href='http://archive.apache.org/dist/wicket'>http://archive.apache.org/dist/wicket</a></li>
 </ul>
