--- a/learn/examples/markupinheritance.html
+++ b/learn/examples/markupinheritance.html
@@ -66,7 +66,7 @@
 			<a href="/learn/examples" title="Examples">Examples</a>
 		</li>
 		<li>
-			<a href="http://wicketstuff.org/wicket14/compref/">Components</a>
+			<a href="http://www.wicket-library.com/wicket-examples/compref/">Components</a>
 		</li>
 		<li>
 			<a href="/learn/projects/" title="Projects extending basic Wicket">Projects</a>
@@ -163,7 +163,7 @@
 
 <p>In the next figure we show a standard strategy for laying out a page. A standard header, the main content body and a standard footer.</p>
 
-<p><img alt='Markup inheritance diagram' src='markupinheritance1.png' /></p>
+<p><img src='markupinheritance1.png' alt='Markup inheritance diagram' /></p>
 
 <p>In Wicket you can achieve this using different strategies. This article focuses on one strategy: markup inheritance.</p>
 
