--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -66,7 +66,7 @@
 			<a href="/learn/examples" title="Examples">Examples</a>
 		</li>
 		<li>
-			<a href="http://wicketstuff.org/wicket14/compref/">Components</a>
+			<a href="http://www.wicket-library.com/wicket-examples/compref/">Components</a>
 		</li>
 		<li>
 			<a href="/learn/projects/" title="Projects extending basic Wicket">Projects</a>
@@ -193,11 +193,11 @@
 	}
 </script><div id='mvncmd'>
 	<div>
-		<label for='groupId' title='Base Package'>GroupId:</label>
-		<input type='text' id='groupId' onkeyup='changeIt();' value='com.mycompany' /><span title='Base Package'>&nbsp;(?)</span><br />
-		<label for='artifactId' title='Project Name'>ArtifactId:</label> 
-		<input type='text' id='artifactId' onkeyup='changeIt();' value='myproject' /><span title='Project Name'>&nbsp;(?)</span><br />
-		<label for='version' title='Wicket Version'>Version:</label>
+		<label title='Base Package' for='groupId'>GroupId:</label>
+		<input id='groupId' type='text' value='com.mycompany' onkeyup='changeIt();' /><span title='Base Package'>&nbsp;(?)</span><br />
+		<label title='Project Name' for='artifactId'>ArtifactId:</label> 
+		<input id='artifactId' type='text' value='myproject' onkeyup='changeIt();' /><span title='Project Name'>&nbsp;(?)</span><br />
+		<label title='Wicket Version' for='version'>Version:</label>
 		<select id='version' onchange='changeIt();'>
 
 		
