--- a/learn/books/koda.html
+++ b/learn/books/koda.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Apache Wicket - Books about Wicket</title>
+    <title>Apache Wicket - Books —  Komponentenbasiert und objektorientiert - das alternative Java-Webframework</title>
 
 	<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen" />
 
@@ -150,9 +150,20 @@
 </div>
 
 		<div id="contentbody">
-			<h1>Books about Wicket</h1>
-			<p>Several books have been written about Apache Wicket, 4 in English, 2 in German and 1 in Japanese. Click on a cover to learn more about each book.</p>
-<a href='awc.html'><img src='awc.png' title='Apache Wicket Cookbook' height='300px' alt='Apache Wicket Cookbook cover' /></a><a href='wia.html'><img src='wia.png' title='Wicket in Action' height='300px' alt='Wicket in Action cover' /></a><a href='koda.html'><img src='koda.jpg' title=' Komponentenbasiert und objektorientiert- das alternative Java-Webframework' height='300px' alt=' Komponentenbasiert und objektorientiert - das alternative Java-Webframework cover' /></a><a href='ewdww.html'><img src='ewdww.png' title='Enjoying Web Development with Wicket' height='300px' alt='Enjoying Web Development with Wicket cover' /></a><a href='prowicket.html'><img src='prowicket.png' title='Pro Wicket' height='300px' alt='Pro Wicket cover' /></a><a href='paxisbuchwicket.html'><img src='praxisbuchwicket.png' title='Praxisbuch Wicket' height='300px' alt='Praxisbuch Wicket cover' /></a><a href='kwij.html'><img src='kwij.png' title='Wicket: Komponentenbasierte Webanwendungen in Java' height='300px' alt='Wicket: Komponentenbasierte Webanwendungen in Java cover' /></a><a href='wicket-jp.html'><img src='wicket-jp.png' title='Wicket Japanese' height='300px' alt='Wicket Japanese cover' /></a>
+			<h1>Books —  Komponentenbasiert und objektorientiert - das alternative Java-Webframework</h1>
+			<h2 id='description'>Description</h2>
+
+<p>Apache Wicket ist ein komponentbasiertes Webframework, das sich in den letzten Jahren zu einem der beliebtesten Vertreter seiner Gattung gemausert hat. Man könnte diese Beliebtheit mit der einfachen Integration von Ajax oder der rigorosen Trennung von Markup und Logik erklären. Aber was Wicket wirklich über die Masse konkurrierender Frameworks erhebt, sind der Verzicht auf eine eigene Markup-Sprache und das objektorientierte Programmiermodell. Dadurch rücken Java und seine Sprachmittel stark in den Vordergrund. Das ermöglicht es erfahrenen Entwicklern, sehr schnell in die Kernkonzepte von Wicket einzusteigen und auch komplexeste Anwendungen umzusetzen.</p>
+
+<p>Ziel dieses Buchs ist es, die grundlegenden Konzepte von Wicket zu vermitteln und im weiteren Verlauf auf fortgeschrittene Aspekte einzugehen. Hierzu wird eine Beispielanwendung entwickelt und Schritt für Schritt erweitert. Anhand detaillierte Codebeispiele werden Sachverhalte wie der Wicket Request Cycle, Models, Validierung und JUnit Testing erklärt. Des Weiteren werden Themen wie Deplyoment-Szenarien (JEE6, Spring, &#8230;) , jQuery-Integration und Performance-Tuning in separaten Kapiteln behandelt. Durch Studium dieses Buchs soll ein Entwickler befähigt werden, skalierbare, wartbare Webanwendungen in Wicket zu bauen, und er soll lernen, eigene, wiederverwendbare Komponenten zu entwickeln und fremde Komponenten zu erweitern. Zielgruppe Entwickler mit soliden Java-Kenntnissen und einem Grundverständnis der wichtigen Webtechnologien wie HTML und CSS</p>
+
+<h2 id='about_the_author'>About the author</h2>
+
+<p>Jochen Mader hat über zehn Jahre Erfahrung im Bereich Architektur und Entwicklung. Derzeit ist er bei der Senacor Technologies AG für verschiedene Wicket-Projekte als Technical Lead verantwortlich.</p>
+
+<h2 id='book_details'>Book details</h2>
+
+<p>Titel Wicket: Komponentenbasiert und objektorientiert- das alternative Java-Webframework Autor Jochen Mader Verlag Software + Support, 2012 ISBN 3868020810, 9783868020816 Länge 219 Seiten</p>
 		</div>
         <div id="clearer"></div>
 		<div id="footer"><span>
