fixed some links in authroles and added a line about the pygments module
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1336057 13f79535-47bb-0310-9956-ffa450edef68

--- a/contribute/write.html
+++ b/contribute/write.html
@@ -179,6 +179,8 @@
 <div class='highlight'><pre><code class='console'><span class='go'>gem install jekyll</span>
 </code></pre>
 </div>
+<p>You also need to install the Pygments Python module.</p>
+
 <h2 id='checkout'>Check out from SVN</h2>
 
 <p>Before you can edit the site, you need to check it out from SVN:</p>
