--- a/learn/projects/authroles.html
+++ b/learn/projects/authroles.html
@@ -172,9 +172,9 @@
 <p>For more documentation use the following links:</p>
 
 <ul>
-<li><a href='http://wicket.apache.org/apidocs/1.4/org/apache/wicket/authentication/package-frame.html'>Authentication API</a></li>
+<li><a href='http://http://wicket.apache.org/apidocs/1.5/org/apache/wicket/authentication/package-summary.html'>Authentication API</a></li>
 
-<li><a href='http://wicket.apache.org/apidocs/1.4/org/apache/wicket/authorization/package-frame.html'>Authorization API</a></li>
+<li><a href='http://http://wicket.apache.org/apidocs/1.5/org/apache/wicket/authorization/package-summary.html'>Authorization API</a></li>
 </ul>
 
 <p>Note that for the instantiation check Wicket will invoke the constructor hierarchy of your component, but will throw an exception if the authorization check fails.</p>
@@ -217,16 +217,16 @@
 <p>More elaborate security solutions exist in the following projects:</p>
 
 <ul>
-<li><a href='https://github.com/wicketstuff/core/tree/master/jdk-1.5-parent/shiro-security'>Wicket Shiro</a> - integration between Apache Shiro and Wicket</li>
+<li><a href='https://github.com/wicketstuff/core/tree/core-1.5.x/jdk-1.5-parent/shiro-security'>Wicket Shiro</a> - integration between Apache Shiro and Wicket</li>
 
-<li><a href='https://github.com/wicketstuff/core/tree/master/jdk-1.5-parent/wicket-security-parent'>Wicket Security</a> - JAAS inspired, principal based security framework</li>
+<li><a href='https://github.com/wicketstuff/core/tree/core-1.5.x/jdk-1.5-parent/wicket-security-parent'>Wicket Security</a> - JAAS inspired, principal based security framework</li>
 </ul>
 
 <p>If other security solutions are available for Wicket, <a href='https://issues.apache.org/jira/browse/WICKET'>let us know</a>.</p>
 
 <h2 id='example'>Example</h2>
 
-<p>The Wicket Examples project contains a <a href='http://wicketstuff.org/wicket14/authorization'>complete example</a> of limiting access to pages and components using roles based authorization. It also contains an <a href='http://wicketstuff.org/wicket14/authentication'>authentication example</a>.</p>
+<p>The Wicket Examples project contains a <a href='http://wicket-library.com/wicket-examples/authorization'>complete example</a> of limiting access to pages and components using roles based authorization. It also contains an <a href='http://wicket-library.com/wicket-examples/authentication'>authentication example</a>.</p>
 
 <p>Click on the source links to see the related source code.</p>
 
