--- a/learn/projects/authroles.html
+++ b/learn/projects/authroles.html
@@ -172,9 +172,9 @@
 <p>For more documentation use the following links:</p>
 
 <ul>
-<li><a href='http://http://wicket.apache.org/apidocs/1.5/org/apache/wicket/authentication/package-summary.html'>Authentication API</a></li>
+<li><a href='http://wicket.apache.org/apidocs/1.5/org/apache/wicket/authentication/package-summary.html'>Authentication API</a></li>
 
-<li><a href='http://http://wicket.apache.org/apidocs/1.5/org/apache/wicket/authorization/package-summary.html'>Authorization API</a></li>
+<li><a href='http://wicket.apache.org/apidocs/1.5/org/apache/wicket/authorization/package-summary.html'>Authorization API</a></li>
 </ul>
 
 <p>Note that for the instantiation check Wicket will invoke the constructor hierarchy of your component, but will throw an exception if the authorization check fails.</p>
