--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
 <h1>Security announcement: CVE-2011-2712</h1>
 <p>A XSS vulnerability has been found in Apache Wicket version 1.4. This is solved in Apache Wicket 1.4.18. Please upgrade your applications to this release. Wicket versions 1.3.x and 1.5.x are not affected by this vulnerability. <a href='2011/08/23/cve-2011-2712.html'>More information</a></p>
 
+<h1 id='wicket_native_websockets_support'><a href='/2012/06/20/wicket-native-websockets.html'>Wicket Native WebSockets support</a></h1>
+<p>A new experimental module just landed in Wicket&#8217;s Git repository - Wicket Native WebSocket. It provides the support for HTML5 WebSockets in Wicket as the one for Ajax that you may already use in your applications.</p><p>The full documentation is available at <a href='https://cwiki.apache.org/confluence/x/0vSoAQ'>Native WebSocket Wiki</a> A demo application is available at <a href='https://github.com/martin-g/wicket-native-websocket-example'>Martin Grigorov&#8217;s GitHub</a></p><p>Any feedback about the new module, its implementation and its documentation is very welcome! Just ask your question in Wicket&#8217;s mailing lists or IRC channel.</p><p>The Wicket team!</p>
 <h1 id='wicket_157_released'><a href='/2012/06/04/wicket-1.5.7-released.html'>Wicket 1.5.7 released</a></h1>
 <p>This is the seventh maintenance release of the Wicket 1.5.x series. This release brings over 26 bug fixes and improvements.</p><ul>
 <li><a href='http://git-wip-us.apache.org/repos/asf/wicket/repo?p=wicket.git;a=shortlog;h=refs/tags/wicket-1.5.7'>Git tag</a></li>
@@ -194,35 +196,13 @@
 </code></pre>
 </div><ul>
 <li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5.7'>full distribution</a> (including source)</li>
-</ul>
-<h1 id='wicket_600beta2_released'><a href='/2012/05/29/wicket-6.0.0-beta2-released.html'>Wicket 6.0.0-beta2 released</a></h1>
-<p>The Wicket team is proud to announce the second beta release of the Wicket 6.x series. This release brings over many improvements over the 1.5.x series.</p><h3 id='new_and_noteworthy'>New and Noteworthy</h3><h4 id='wicket_atmosphere'>Wicket Atmosphere</h4><p>The Beta 2 contains a new experimental module Wicket Atmosphere, which brings serverside push to Wicket and provides a great way to render serverside markup and send it to the browsers of your users. Check out the atmosphere example in our Examples project to see it in action.</p><p>In your application&#8217;s init method you need to register the push event bus:</p><div class='highlight'><pre><code class='java'><span class='k'>new</span> <span class='nf'>EventBus</span><span class='o'>(</span><span class='k'>this</span><span class='o'>);</span>
-</code></pre>
-</div><p>Somewhere where you want to push your changes to the client, you need to publish your event to the push <code>EventBus</code>:</p><div class='highlight'><pre><code class='java'><span class='n'>EventBus</span><span class='o'>.</span><span class='na'>get</span><span class='o'>().</span><span class='na'>post</span><span class='o'>(</span><span class='n'>input</span><span class='o'>.</span><span class='na'>getModelObject</span><span class='o'>());</span>
-</code></pre>
-</div>
-<p><p>And finally you need to subscribe your page (or component) to the <code>EventBus</code>&#8217;s events with <code>@Subscribe</code>, taking in the typed parameter you post to the EventBus (in this case a <code>String</code>):</p></p>
+</ul><h1>Older news items</h1><ul>
 
-<p><p><div class='highlight'><pre><code class='java'><span class='nd'>@Subscribe</span>
-<span class='kd'>public</span> <span class='kt'>void</span> <span class='nf'>receiveMessage</span><span class='o'>(</span><span class='n'>AjaxRequestTarget</span> <span class='n'>target</span><span class='o'>,</span> <span class='n'>String</span> <span class='n'>message</span><span class='o'>)</span> <span class='o'>{</span>
-	<span class='n'>label</span><span class='o'>.</span><span class='na'>setDefaultModelObject</span><span class='o'>(</span><span class='n'>message</span><span class='o'>);</span>
-	<span class='n'>target</span><span class='o'>.</span><span class='na'>add</span><span class='o'>(</span><span class='n'>label</span><span class='o'>);</span>
-<span class='o'>}</span>
-</code></pre>
-</div></p></p>
-<p>To be able to use Wicket Atmosphere you need to include the following dependency:</p><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
-    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
-    <span class='nt'>&lt;artifactId&gt;</span>wicket-atmosphere<span class='nt'>&lt;/artifactId&gt;</span>
-    <span class='nt'>&lt;version&gt;</span>0.1<span class='nt'>&lt;/version&gt;</span>
-<span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div><p>Please note that this is still experimental.</p><h3 id='this_release'>This release</h3><p>Check the <a href='https://cwiki.apache.org/WICKET/wicket-60-roadmap.html'>roadmap</a> with a list of the major goals. And the <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-60.html'>migration guide</a> with all major and some minor changes between 1.5.x and 6.x series.</p><p>The Jira changelog of all closed ticket at <a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12320343'>Jira</a></p><p>To use it in Maven:</p><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
-    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
-    <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
-    <span class='nt'>&lt;version&gt;</span>6.0.0-beta2<span class='nt'>&lt;/version&gt;</span>
-<span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div><p>If you don&#8217;t use a dependencies management build tool then you can download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/6.0.0-beta2'>full distribution</a> (including source).</p><p>There are no more planned API breaks but if you find something that can be made better now it the time to discuss it! We will try to avoid making any API changes in the Release Candidates that will follow this beta release.</p><p>Any feedback about the new features, their implementation and their documentation is very welcome!</p><p>The Wicket team!</p><h1>Older news items</h1><ul>
+
+<li>
+        <a href='/2012/05/29/wicket-6.0.0-beta2-released.html'>Wicket 6.0.0-beta2 released</a> - <span>29 May 2012</span><br />
+        The Wicket team is proud to announce the second beta release of the Wicket 6.x series. This release brings over many improvements over the 1.5.x...
+        <a href='/2012/05/29/wicket-6.0.0-beta2-released.html'>more</a></li>
 
 
 <li>
@@ -277,12 +257,6 @@
         <a href='/2011/10/24/wicket-1.5.2-released.html'>Wicket 1.5.2 released</a> - <span>24 Oct 2011</span><br />
         This is the second maintenance release of the Wicket 1.5.x series. This release brings over 25 bug fixes and 5 improvements. Subversion tag Changelog To...
         <a href='/2011/10/24/wicket-1.5.2-released.html'>more</a></li>
-
-
-<li>
-        <a href='/2011/10/17/wicket-1.4.19-released.html'>Wicket 1.4.19 released</a> - <span>17 Oct 2011</span><br />
-        This is nineteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch. Subversion tag Changelog To...
-        <a href='/2011/10/17/wicket-1.4.19-released.html'>more</a></li>
 
 </ul>
 <h1 id='books_about_wicket'>Books about Wicket</h1>
