--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -200,11 +200,11 @@
 </script><div id='mvncmd'>
 	<div>
 		<label for='groupId' title='Base Package'>GroupId:</label>
-		<input type='text' id='groupId' value='com.mycompany' onkeyup='changeIt();' /><span title='Base Package'>&nbsp;(?)</span><br />
+		<input type='text' onkeyup='changeIt();' value='com.mycompany' id='groupId' /><span title='Base Package'>&nbsp;(?)</span><br />
 		<label for='artifactId' title='Project Name'>ArtifactId:</label> 
-		<input type='text' id='artifactId' value='myproject' onkeyup='changeIt();' /><span title='Project Name'>&nbsp;(?)</span><br />
+		<input type='text' onkeyup='changeIt();' value='myproject' id='artifactId' /><span title='Project Name'>&nbsp;(?)</span><br />
 		<label for='version' title='Wicket Version'>Version:</label>
-		<select id='version' onchange='changeIt();'>
+		<select onchange='changeIt();' id='version'>
 
 		
 			<option value='6.0-SNAPSHOT'>6.0-SNAPSHOT</option>
@@ -223,7 +223,7 @@
 		
 
 		
-			<option value='1.5.7' selected='selected'>1.5.7</option>
+			<option selected='selected' value='1.5.7'>1.5.7</option>
 		
 
 		
