--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -200,11 +200,11 @@
 </script><div id='mvncmd'>
 	<div>
 		<label for='groupId' title='Base Package'>GroupId:</label>
-		<input type='text' onkeyup='changeIt();' value='com.mycompany' id='groupId' /><span title='Base Package'>&nbsp;(?)</span><br />
+		<input id='groupId' onkeyup='changeIt();' type='text' value='com.mycompany' /><span title='Base Package'>&nbsp;(?)</span><br />
 		<label for='artifactId' title='Project Name'>ArtifactId:</label> 
-		<input type='text' onkeyup='changeIt();' value='myproject' id='artifactId' /><span title='Project Name'>&nbsp;(?)</span><br />
+		<input id='artifactId' onkeyup='changeIt();' type='text' value='myproject' /><span title='Project Name'>&nbsp;(?)</span><br />
 		<label for='version' title='Wicket Version'>Version:</label>
-		<select onchange='changeIt();' id='version'>
+		<select id='version' onchange='changeIt();'>
 
 		
 			<option value='6.0-SNAPSHOT'>6.0-SNAPSHOT</option>
@@ -227,7 +227,7 @@
 		
 
 		
-			<option value='6.0.0-beta2'>6.0.0-beta2</option>
+			<option value='6.0.0-beta3'>6.0.0-beta3</option>
 		
 
 		</select><span title='Wicket Version'>&nbsp;(?)</span>
