Use '--cached' to generate a patch
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1369768 13f79535-47bb-0310-9956-ffa450edef68

--- a/contribute/patch.html
+++ b/contribute/patch.html
@@ -181,7 +181,7 @@
 <li>Create the patch:</li>
 </ul>
 <div class='highlight'><pre><code class='console'><span class='go'>git add any_files_you_created_modified_or_deleted</span>
-<span class='go'>git diff &gt; /tmp/fix-WICKET-NNNN.patch</span>
+<span class='go'>git diff --cached &gt; /tmp/fix-WICKET-NNNN.patch</span>
 </code></pre>
 </div>
 <ul>
