--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -200,9 +200,9 @@
 </script><div id='mvncmd'>
 	<div>
 		<label for='groupId' title='Base Package'>GroupId:</label>
-		<input id='groupId' onkeyup='changeIt();' type='text' value='com.mycompany' /><span title='Base Package'>&nbsp;(?)</span><br />
+		<input onkeyup='changeIt();' id='groupId' type='text' value='com.mycompany' /><span title='Base Package'>&nbsp;(?)</span><br />
 		<label for='artifactId' title='Project Name'>ArtifactId:</label> 
-		<input id='artifactId' onkeyup='changeIt();' type='text' value='myproject' /><span title='Project Name'>&nbsp;(?)</span><br />
+		<input onkeyup='changeIt();' id='artifactId' type='text' value='myproject' /><span title='Project Name'>&nbsp;(?)</span><br />
 		<label for='version' title='Wicket Version'>Version:</label>
 		<select id='version' onchange='changeIt();'>
 
