Update jlocke's blog address.
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1377420 13f79535-47bb-0310-9956-ffa450edef68

--- a/meet/blogs.html
+++ b/meet/blogs.html
@@ -166,7 +166,7 @@
 
 <li><a href='http://chillenious.wordpress.com/'>Chillenious!</a> - Eelco Hillenius</li>
 
-<li><a href='http://web.mac.com/jonathan.locke/iWeb/JonathanLocke/Blog/Blog.html'>Jonathan</a> - Jonathan Locke</li>
+<li><a href='http://codeact.wordpress.com/'>Jonathan</a> - Jonathan Locke</li>
 
 <li><a href='http://herebebeasties.com/'>Here be beasties</a> - Al Maw</li>
 
