--- a/learn/examples/markupinheritance.html
+++ b/learn/examples/markupinheritance.html
@@ -169,7 +169,7 @@
 
 <p>In the next figure we show a standard strategy for laying out a page. A standard header, the main content body and a standard footer.</p>
 
-<p><img alt='Markup inheritance diagram' src='markupinheritance1.png' /></p>
+<p><img src='markupinheritance1.png' alt='Markup inheritance diagram' /></p>
 
 <p>In Wicket you can achieve this using different strategies. This article focuses on one strategy: markup inheritance.</p>
 
