--- a/learn/examples/navomatic.html
+++ b/learn/examples/navomatic.html
@@ -163,11 +163,11 @@
 
 <p>The link in the navigation to the current page is automatically turned into italic text to indicate to the user what page they are on. The first screen capture shows the Page1 page with the Page1 link in italics.</p>
 
-<p><img alt='Figure 1' src='navomatic1.png' /></p>
+<p><img src='navomatic1.png' alt='Figure 1' /></p>
 
 <p>When you click on the Page2 link, you get the following screen.</p>
 
-<p><img alt='Figure 2' src='navomatic2.png' /></p>
+<p><img src='navomatic2.png' alt='Figure 2' /></p>
 
 <p>As you can see, Page1 has no special style anymore, and Page2 is now displayed in italics. Also the message box shows that we are viewing Page2 instead of Page1.</p>
 
