--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -199,11 +199,11 @@
 	}
 </script><div id='mvncmd'>
 	<div>
-		<label for='groupId' title='Base Package'>GroupId:</label>
-		<input type='text' value='com.mycompany' onkeyup='changeIt();' id='groupId' /><span title='Base Package'>&nbsp;(?)</span><br />
-		<label for='artifactId' title='Project Name'>ArtifactId:</label> 
-		<input type='text' value='myproject' onkeyup='changeIt();' id='artifactId' /><span title='Project Name'>&nbsp;(?)</span><br />
-		<label for='version' title='Wicket Version'>Version:</label>
+		<label title='Base Package' for='groupId'>GroupId:</label>
+		<input value='com.mycompany' type='text' onkeyup='changeIt();' id='groupId' /><span title='Base Package'>&nbsp;(?)</span><br />
+		<label title='Project Name' for='artifactId'>ArtifactId:</label> 
+		<input value='myproject' type='text' onkeyup='changeIt();' id='artifactId' /><span title='Project Name'>&nbsp;(?)</span><br />
+		<label title='Wicket Version' for='version'>Version:</label>
 		<select onchange='changeIt();' id='version'>
 
 		
@@ -219,11 +219,11 @@
 		
 
 		
-			<option value='1.4.20'>1.4.20</option>
+			<option value='1.4.21'>1.4.21</option>
 		
 
 		
-			<option selected='selected' value='1.5.8'>1.5.8</option>
+			<option value='1.5.8' selected='selected'>1.5.8</option>
 		
 
 		
