--- a/start/download.html
+++ b/start/download.html
@@ -168,7 +168,7 @@
 
 		<div id="contentbody">
 			<h1>Download Wicket releases</h1>
-			<p>Apache Wicket 6.1.0 is the current stable release.</p>
+			<p>Apache Wicket 6.1.0 is the current stable release. Most users get Apache Wicket using <a href='#maven'>Apache Maven&#8217;s dependency management</a>, which incidentally is the most convenient way of obtaining the latest and greatest Wicket.</p>
 
 <h2 id='download'>Download</h2>
 
@@ -177,16 +177,20 @@
 <ul>
 <li><strong>Latest stable release</strong>: <a href='http://www.apache.org/dyn/closer.cgi/wicket/6.1.0'>6.1.0</a></li>
 
-<li><strong>Last 6.0.x release</strong>: <a href='http://archive.apache.org/dist/wicket/6.1.0'>6.1.0</a></li>
+<li><strong>Latest 6.x release</strong>: <a href='http://archive.apache.org/dist/wicket/6.1.0'>6.1.0</a></li>
 
-<li><strong>Last 1.5.x release</strong>: <a href='http://archive.apache.org/dist/wicket/1.5.8'>1.5.8</a></li>
+<li><strong>Latest 1.5.x release</strong>: <a href='http://archive.apache.org/dist/wicket/1.5.8'>1.5.8</a></li>
 
-<li><strong>Last 1.4.x release</strong>: <a href='http://archive.apache.org/dist/wicket/1.4.21'>1.4.21</a></li>
+<li><strong>Latest 1.4.x release</strong> (no longer maintained): <a href='http://archive.apache.org/dist/wicket/1.4.21'>1.4.21</a></li>
 
 <li><strong>Archived releases</strong>: <a href='http://archive.apache.org/dist/wicket'>http://archive.apache.org/dist/wicket</a></li>
 </ul>
 
-<p>We recommend you <a href='quickstart.html'>start</a> with our latest stable release. If you are migrating an existing application from Wicket 1.4 to 1.5, you may find the <a href='http://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>migration guide</a> invaluable.</p>
+<p>We recommend you <a href='quickstart.html'>start</a> with our latest stable release.</p>
+
+<h3 id='requirements'>Requirements</h3>
+
+<h4 id='java_version'>Java version</h4>
 
 <ul>
 <li>Apache Wicket 6.x requires JDK 6.0 or newer</li>
@@ -196,9 +200,33 @@
 <li>Apache Wicket 1.4.x requires JDK 1.5 or newer</li>
 </ul>
 
-<p>You cannot use Wicket without adding an SLF4J logging implementation to your classpath. Most people use <a href='http://logging.apache.org/log4j'>log4j</a>. If you do, just include <strong>slf4j-log4j12.jar</strong> on your classpath to get Wicket to use log4j too. If you want to use commons-logging or JDK14 logging or something else, please see the <a href='http://www.slf4j.org/faq.html'>SLF4J site</a> for more information.</p>
+<h4 id='mixing_wicket_versions'>Mixing Wicket versions</h4>
 
-<h2 id='maven_2'>Maven 2</h2>
+<p>You cannot mix different Wicket versions in your project. You should always use the artifacts from a particular release train.</p>
+
+<p>For example it is <strong>NOT</strong> possible to use Wicket Extensions 1.5 in a Wicket 6 project. The same goes for 3rd party libraries: make sure you always use a compatible version of your 3rd party library.</p>
+
+<h4 id='logging'>Logging</h4>
+
+<p>You cannot use Wicket without adding an SLF4J logging implementation to your classpath. Most people use <a href='http://logging.apache.org/log4j'>log4j</a>.</p>
+
+<p>If you do, just include <strong>slf4j-log4j12.jar</strong> on your classpath to get Wicket to use log4j too. If you want to use commons-logging or JDK14 logging or something else, please see the <a href='http://www.slf4j.org/faq.html'>SLF4J site</a> for more information.</p>
+
+<h2 id='migrating_from_earlier_versions'>Migrating from earlier versions</h2>
+
+<p>If you are migrating an existing application from earlier versions of Wicket you may find our migration guides invaluable:</p>
+
+<ul>
+<li>Migrating from <a href='https://cwiki.apache.org/WICKET/migrate-13.html'>Wicket 1.2 to Wicket 1.3</a></li>
+
+<li>Migrating from <a href='https://cwiki.apache.org/WICKET/migrating-to-wicket-14.html'>Wicket 1.3 to Wicket 1.4</a></li>
+
+<li>Migrating from <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>Wicket 1.4 to Wicket 1.5</a></li>
+
+<li>Migrating from <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-60.html'>Wicket 1.5 to Wicket 6</a></li>
+</ul>
+
+<h2 id='maven'>Maven</h2>
 
 <p>Add the following snippet to your Maven project descriptor (<code>pom.xml</code>):</p>
 <div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
