WICKET-4984 Update quickstart info for changed workflow in IntelliJ idea
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1439332 13f79535-47bb-0310-9956-ffa450edef68

--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -298,7 +298,7 @@
 
 <h4 id='idea'>IDEA</h4>
 
-<p>From within IDEA, just use &#8220;File/New Project/Import from external model/Maven&#8221;, choose the project directory and select the generated pom.xml.</p>
+<p>From within IDEA, just use &#8220;File/Import Project&#8221;, choose the project directory and specify that this is a Maven project.</p>
 
 <h4 id='netbeans'>NetBeans</h4>
 
