--- a/contribute/patch.html
+++ b/contribute/patch.html
@@ -193,7 +193,8 @@
 </ul>
 <div class='highlight'><pre><code class='console'><span class='go'>git add any_files_you_created_modified_or_deleted</span>
 <span class='go'>git diff --cached &gt; /tmp/fix-WICKET-NNNN.patch</span>
-</code></pre></div>
+</code></pre>
+</div>
 <ul>
 <li>Attach that file (/tmp/fix-WICKET-NNNN.patch) to the <a href='https://issues.apache.org/jira/browse/WICKET'>JIRA</a></li>
 </ul>
