--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
     <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
     <span class='nt'>&lt;version&gt;</span>1.5.10<span class='nt'>&lt;/version&gt;</span>
 <span class='nt'>&lt;/dependency&gt;</span>
-</code></pre></div><ul>
+</code></pre>
+</div><ul>
 <li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5.10'>full distribution</a> (including source)</li>
 </ul><h1>Older news items</h1><ul>
 
