--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -211,11 +211,11 @@
 </script><div id='mvncmd'>
 	<div>
 		<label for='groupId' title='Base Package'>GroupId:</label>
-		<input onkeyup='changeIt();' value='com.mycompany' id='groupId' type='text' /><span title='Base Package'>&nbsp;(?)</span><br />
+		<input id='groupId' onkeyup='changeIt();' type='text' value='com.mycompany' /><span title='Base Package'>&nbsp;(?)</span><br />
 		<label for='artifactId' title='Project Name'>ArtifactId:</label> 
-		<input onkeyup='changeIt();' value='myproject' id='artifactId' type='text' /><span title='Project Name'>&nbsp;(?)</span><br />
+		<input id='artifactId' onkeyup='changeIt();' type='text' value='myproject' /><span title='Project Name'>&nbsp;(?)</span><br />
 		<label for='version' title='Wicket Version'>Version:</label>
-		<select onchange='changeIt();' id='version'>
+		<select id='version' onchange='changeIt();'>
 
 		
 			<option value='6.7-SNAPSHOT'>6.7-SNAPSHOT</option>
@@ -238,14 +238,14 @@
 		
 
 		
-			<option value='6.6.0' selected='selected'>6.6.0</option>
+			<option selected='selected' value='6.6.0'>6.6.0</option>
 		
 
 		</select><span title='Wicket Version'>&nbsp;(?)</span>
 	</div>
 	<div>
-		<label id='cmdLabel' for='cmdLine'>Command Line:</label>
-		<textarea onfocus='this.select();' id='cmdLine'>
+		<label for='cmdLine' id='cmdLabel'>Command Line:</label>
+		<textarea id='cmdLine' onfocus='this.select();'>
 		</textarea>
 		<script>changeIt();</script>
 	</div>
