WICKET-5156 [quickstart] archetype not found for 6.8-SNAPSHOT and the stable version 6.7 is not in the drop list
Fix current stable version and the version for 6.8.0-SNAPSHOT



git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1475639 13f79535-47bb-0310-9956-ffa450edef68

--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -218,7 +218,7 @@
 		<select id='version' onchange='changeIt();'>
 
 		
-			<option value='6.8-SNAPSHOT'>6.8-SNAPSHOT</option>
+			<option value='6.8.0-SNAPSHOT'>6.8.0-SNAPSHOT</option>
 		
 
 		
@@ -238,7 +238,7 @@
 		
 
 		
-			<option value='6.6.0'>6.6.0</option>
+			<option selected='selected' value='6.7.0'>6.7.0</option>
 		
 
 		</select><span title='Wicket Version'>&nbsp;(?)</span>
