Upgrade to jekyll 1.0.2 (and ruby 1.9.3-p429)
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1484991 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
     <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
     <span class='nt'>&lt;version&gt;</span>6.7.0<span class='nt'>&lt;/version&gt;</span>
 <span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div><p>Or download and build the distribution yourself, or use our convenience binary package</p><ul>
+</code></pre></div><p>Or download and build the distribution yourself, or use our convenience binary package</p><ul>
 <li>Source: <a href='http://www.apache.org/dyn/closer.cgi/wicket/6.7.0'>http://www.apache.org/dyn/closer.cgi/wicket/6.7.0</a></li>
 
 <li>Binary: <a href='http://www.apache.org/dyn/closer.cgi/wicket/6.7.0/binaries'>http://www.apache.org/dyn/closer.cgi/wicket/6.7.0/binaries</a></li>
