--- a/learn/projects/authroles.html
+++ b/learn/projects/authroles.html
@@ -226,8 +226,7 @@
 <span class='c1'>// either bookmarkable or not</span>
 <span class='nd'>@AuthorizeInstantiation</span><span class='o'>(</span><span class='s'>&quot;ADMIN&quot;</span><span class='o'>)</span>
 <span class='kd'>public</span> <span class='kd'>class</span> <span class='nc'>AdminAnnotationsBookmarkablePage</span> <span class='kd'>extends</span> <span class='n'>WebPage</span>
-</code></pre>
-</div>
+</code></pre></div>
 <p>When someone who doesn&#8217;t have the role ADMIN, Wicket will not allow the page to be fully constructed and throw an authorization exception during the construction of the page. This will result in an access denied page for the user.</p>
 
 <p>Enablng the annotations for role based authorization is done by setting the <code>WebApplication#getSecuritySettings</code> value to <code>AnnotationsRoleAuthorizationStrategy</code>. Then you can use the auth/roles provided authorization annotations.</p>
@@ -262,8 +261,7 @@
     <span class='nt'>&lt;artifactId&gt;</span>wicket-auth-roles<span class='nt'>&lt;/artifactId&gt;</span>
     <span class='nt'>&lt;version&gt;</span>6.7.0<span class='nt'>&lt;/version&gt;</span>
 <span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div>
+</code></pre></div>
 <h3 id='required_dependencies'>Required dependencies</h3>
 
 <p>Wicket Auth/Roles requires the following jar files to be on your classpath:</p>
