Fixed confluence links for the most part
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1496145 13f79535-47bb-0310-9956-ffa450edef68

--- a/meet/blogs.html
+++ b/meet/blogs.html
@@ -207,7 +207,7 @@
 
 <h2 id='get_your_blog_listed'>Get your blog listed!</h2>
 
-<p>If you think your blog is missing, then please send a message to one of the core contributors or the mailinglist. In the mean time you can add your blog to our wiki&#8217;s <a href='https://cwiki.apache.org/WICKET/wicket-blogs.html'>special blog page</a>.</p>
+<p>If you think your blog is missing, then please send a message to one of the core contributors or the mailinglist. In the mean time you can add your blog to our wiki&#8217;s <a href='https://cwiki.apache.org/confluence/display/WICKET/Wicket+Blogs'>special blog page</a>.</p>
 		</div>
         <div id="clearer"></div>
 		<div id="footer"><span>
