--- a/help/index.html
+++ b/help/index.html
@@ -221,7 +221,7 @@
 
 <h2 id='commercial_support'>Commercial Support</h2>
 
-<p>The list of companies found at <a href='https://cwiki.apache.org/WICKET/companies-that-provide-services.html'>this wiki page</a> provide commercial services for Wicket which ranges from training courses, consultancy and even project development.</p>
+<p>The list of companies found at <a href='https://cwiki.apache.org/confluence/display/WICKET/Companies+that+provide+services'>this wiki page</a> provide commercial services for Wicket which ranges from training courses, consultancy and even project development.</p>
 
 <p>Being mentioned here is not an indication of official &#8220;endorsement&#8221; by the Apache Software Foundation, but is instead provided as a public service. This list is in no way a complete listing of the many organizations providing either free or for cost support for ASF projects. If you would like to be added to this list, or removed, sign up for the wiki and add yourself to the list.</p>
 		</div>
