--- a/learn/examples/dropdownchoice.html
+++ b/learn/examples/dropdownchoice.html
@@ -171,7 +171,7 @@
 
 		<div id="contentbody">
 			<h1>Using the DropDownChoice component</h1>
-			<p>One of the most problematic components for beginners of Wicket is the <code>DropDownChoice</code> component. In this example we will work the component to give a little more insight into its workings. This example requires that you have some understanding of the Wicket component model (nothing fancy though, but you might want to read the other examples first), and the Model concept used in Wicket (you can read more on models <a href='http://cwiki.apache.org/WICKET/working-with-wicket-models.html'>here</a>).</p>
+			<p>One of the most problematic components for beginners of Wicket is the <code>DropDownChoice</code> component. In this example we will work the component to give a little more insight into its workings. This example requires that you have some understanding of the Wicket component model (nothing fancy though, but you might want to read the other examples first), and the Model concept used in Wicket (you can read more on models <a href='https://cwiki.apache.org/confluence/display/WICKET/Working+with+Wicket+models'>here</a>).</p>
 
 <h2 id='the_example_domain'>The example domain</h2>
 
