--- a/start/download.html
+++ b/start/download.html
@@ -220,13 +220,13 @@
 <p>If you are migrating an existing application from earlier versions of Wicket you may find our migration guides invaluable:</p>
 
 <ul>
-<li>Migrating from <a href='https://cwiki.apache.org/WICKET/migrate-13.html'>Wicket 1.2 to Wicket 1.3</a></li>
+<li>Migrating from <a href='https://cwiki.apache.org/confluence/display/WICKET/Migrating+to+Wicket+1.3'>Wicket 1.2 to Wicket 1.3</a></li>
 
-<li>Migrating from <a href='https://cwiki.apache.org/WICKET/migrating-to-wicket-14.html'>Wicket 1.3 to Wicket 1.4</a></li>
+<li>Migrating from <a href='https://cwiki.apache.org/confluence/display/WICKET/Migrating+to+Wicket+1.4'>Wicket 1.3 to Wicket 1.4</a></li>
 
-<li>Migrating from <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>Wicket 1.4 to Wicket 1.5</a></li>
+<li>Migrating from <a href='https://cwiki.apache.org/confluence/display/WICKET/Migration+to+Wicket+1.5'>Wicket 1.4 to Wicket 1.5</a></li>
 
-<li>Migrating from <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-60.html'>Wicket 1.5 to Wicket 6</a></li>
+<li>Migrating from <a href='https://cwiki.apache.org/confluence/display/WICKET/Migration+to+Wicket+6.0'>Wicket 1.5 to Wicket 6</a></li>
 </ul>
 
 <h2 id='maven'>Maven</h2>
